# zortheu

./: Cargo.toml  LICENSE  README.md  index.html  index.scss
.github/workflows/: deploy.yml
src/: app.rs
src/components/: background.rs  mod.rs  navelement.rs
src/pages/: home.rs  mod.rs  space_trade.rs
