[package]
name = "Zortheu"
version = "0.1.0"
edition = "2024"
description = ""
readme = "README.md"
repository = ""
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { git = "https://github.com/yewstack/yew", branch = "master", features = ["csr"] }
